Add MyOrders component with inital styling

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,7 +10,7 @@
   width: 7.5rem;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 20px;
 }
 .header img {
   height: 36px;
