--- a/src/components/NewOrder.css
+++ b/src/components/NewOrder.css
@@ -21,11 +21,13 @@
   display: flex;
   flex-direction: column;
 }
-.input-field input {
-  height: 35px;
-  padding: 5px;
+.input-field > input {
+  width: 295px;
+  height: 45px;
+  padding-left: 10px;
   border: 1px solid #d0d0d0;
   border-radius: 8px;
+  background: white;
 }
 
 /* --- middle of the page --- */
@@ -39,7 +41,7 @@ textarea {
   left: 448px;
   top: 218px;
   border: 1px solid #d0d0d0;
-  background: transparent;
+  background: white;
   border-radius: 8px;
 }
 .type-of-service {
@@ -58,8 +60,8 @@ textarea {
   color: #737373;
 }
 .checkbox-round {
-  width: 13px;
-  height: 13px;
+  width: 10px;
+  height: 10px;
   margin-right: 10px;
   background-color: white;
   border-radius: 50%;
