--- a/src/components/NewOrder.css
+++ b/src/components/NewOrder.css
@@ -113,6 +113,7 @@ p {
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  padding-bottom: 50px;
   display: flex;
   align-items: center;
   letter-spacing: -0.02em;
